etapa6/y.output
Terminals unused in grammar

    TOKEN_ERROR


State 152 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration declaration_list
    3                 | %empty

    4 declaration: declaration_function
    5            | declaration_global

    6 declaration_global: declaration_global_int
    7                   | declaration_global_char
    8                   | declaration_global_float

    9 declaration_global_int: KW_INT TK_IDENTIFIER ':' expression ';'
   10                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   11                       | KW_INT TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val ';'

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' expression ';'
   13                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   14                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val ';'

   15 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' LIT_INTEGER OPERATOR_DIV LIT_INTEGER ';'
   16                         | KW_FLOAT TK_IDENTIFIER '[' LIT_INTEGER ']' ';'

   17 array_val: LIT_INTEGER array_val
   18          | LIT_INTEGER
   19          | LIT_CHAR array_val
   20          | LIT_CHAR

   21 declaration_function: KW_INT TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   22                     | KW_CHAR TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body
   23                     | KW_FLOAT TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body

   24 declaration_function_args_or_empty: declaration_function_args
   25                                   | %empty

   26 declaration_function_args: KW_INT TK_IDENTIFIER ',' declaration_function_args
   27                          | KW_CHAR TK_IDENTIFIER ',' declaration_function_args
   28                          | KW_FLOAT TK_IDENTIFIER ',' declaration_function_args
   29                          | KW_INT TK_IDENTIFIER
   30                          | KW_CHAR TK_IDENTIFIER
   31                          | KW_FLOAT TK_IDENTIFIER

   32 declaration_function_body: command

   33 function_call: TK_IDENTIFIER '(' function_call_args_or_empty ')'

   34 function_call_args_or_empty: function_call_args
   35                            | %empty

   36 function_call_args: expression
   37                   | expression ',' function_call_args

   38 command: attribution
   39        | flux_control
   40        | print
   41        | return
   42        | command_block
   43        | %empty

   44 command_block: '{' command_list '}'

   45 command_list: command ';' command_list
   46             | label command_list
   47             | %empty

   48 attribution: TK_IDENTIFIER '=' expression
   49            | array_element '=' expression

   50 expression: LIT_INTEGER
   51           | LIT_CHAR
   52           | TK_IDENTIFIER
   53           | KW_READ
   54           | array_element
   55           | expression OPERATOR_ADD expression
   56           | expression OPERATOR_SUB expression
   57           | expression OPERATOR_MULT expression
   58           | expression OPERATOR_DIV expression
   59           | expression OPERATOR_LT expression
   60           | expression OPERATOR_LTE expression
   61           | expression OPERATOR_GT expression
   62           | expression OPERATOR_GTE expression
   63           | expression OPERATOR_EQ expression
   64           | expression OPERATOR_DIF expression
   65           | '(' expression ')'
   66           | function_call

   67 array_element: TK_IDENTIFIER '[' expression ']'

   68 print: KW_PRINT print_rest

   69 print_rest: LIT_STRING
   70           | LIT_STRING ',' print_rest
   71           | expression
   72           | expression ',' print_rest

   73 return: KW_RETURN expression

   74 flux_control: KW_IF expression KW_THEN command
   75             | KW_IF expression KW_THEN command KW_ELSE command
   76             | KW_WHILE expression command
   77             | go_to

   78 label: TK_IDENTIFIER ':'

   79 go_to: KW_GOTO TK_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 21 22 23 33 65
    ')' (41) 21 22 23 33 65
    ',' (44) 26 27 28 37 70 72
    ':' (58) 9 11 12 14 15 78
    ';' (59) 9 10 11 12 13 14 15 16 45
    '=' (61) 48 49
    '[' (91) 10 11 13 14 16 67
    ']' (93) 10 11 13 14 16 67
    '{' (123) 44
    '}' (125) 44
    error (256)
    KW_CHAR <symbol> (258) 12 13 14 22 27 30
    KW_INT <symbol> (259) 9 10 11 21 26 29
    KW_FLOAT <symbol> (260) 15 16 23 28 31
    KW_IF (261) 74 75
    KW_THEN (262) 74 75
    KW_ELSE (263) 75
    KW_WHILE (264) 76
    KW_GOTO (265) 79
    KW_READ (266) 53
    KW_PRINT (267) 68
    KW_RETURN (268) 73
    OPERATOR_ADD <symbol> (269) 55
    OPERATOR_SUB <symbol> (270) 56
    OPERATOR_MULT <symbol> (271) 57
    OPERATOR_DIV <symbol> (272) 15 58
    OPERATOR_LTE <symbol> (273) 60
    OPERATOR_LT <symbol> (274) 59
    OPERATOR_GTE <symbol> (275) 62
    OPERATOR_GT <symbol> (276) 61
    OPERATOR_EQ <symbol> (277) 63
    OPERATOR_DIF <symbol> (278) 64
    TK_IDENTIFIER <symbol> (279) 9 10 11 12 13 14 15 16 21 22 23 26 27 28 29 30 31 33 48 52 67 78 79
    LIT_INTEGER <symbol> (280) 10 11 13 14 15 16 17 18 50
    LIT_CHAR <symbol> (281) 19 20 51
    LIT_STRING <symbol> (282) 69 70
    TOKEN_ERROR (283)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    program <ast> (40)
        on left: 1
        on right: 0
    declaration_list <ast> (41)
        on left: 2 3
        on right: 1 2
    declaration <ast> (42)
        on left: 4 5
        on right: 2
    declaration_global <ast> (43)
        on left: 6 7 8
        on right: 5
    declaration_global_int <ast> (44)
        on left: 9 10 11
        on right: 6
    declaration_global_char <ast> (45)
        on left: 12 13 14
        on right: 7
    declaration_global_float <ast> (46)
        on left: 15 16
        on right: 8
    array_val <ast> (47)
        on left: 17 18 19 20
        on right: 11 14 17 19
    declaration_function <ast> (48)
        on left: 21 22 23
        on right: 4
    declaration_function_args_or_empty <ast> (49)
        on left: 24 25
        on right: 21 22 23
    declaration_function_args <ast> (50)
        on left: 26 27 28 29 30 31
        on right: 24 26 27 28
    declaration_function_body <ast> (51)
        on left: 32
        on right: 21 22 23
    function_call <ast> (52)
        on left: 33
        on right: 66
    function_call_args_or_empty <ast> (53)
        on left: 34 35
        on right: 33
    function_call_args <ast> (54)
        on left: 36 37
        on right: 34 37
    command <ast> (55)
        on left: 38 39 40 41 42 43
        on right: 32 45 74 75 76
    command_block <ast> (56)
        on left: 44
        on right: 42
    command_list <ast> (57)
        on left: 45 46 47
        on right: 44 45 46
    attribution <ast> (58)
        on left: 48 49
        on right: 38
    expression <ast> (59)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 9 12 36 37 48 49 55 56 57 58 59 60 61 62 63 64 65 67 71 72 73 74 75 76
    array_element <ast> (60)
        on left: 67
        on right: 49 54
    print <ast> (61)
        on left: 68
        on right: 40
    print_rest <ast> (62)
        on left: 69 70 71 72
        on right: 68 70 72
    return <ast> (63)
        on left: 73
        on right: 41
    flux_control <ast> (64)
        on left: 74 75 76 77
        on right: 39
    label <ast> (65)
        on left: 78
        on right: 46
    go_to <ast> (66)
        on left: 79
        on right: 77


State 0

    0 $accept: . program $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declaration_list)

    program                   go to state 4
    declaration_list          go to state 5
    declaration               go to state 6
    declaration_global        go to state 7
    declaration_global_int    go to state 8
    declaration_global_char   go to state 9
    declaration_global_float  go to state 10
    declaration_function      go to state 11


State 1

   12 declaration_global_char: KW_CHAR . TK_IDENTIFIER ':' expression ';'
   13                        | KW_CHAR . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   14                        | KW_CHAR . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val ';'
   22 declaration_function: KW_CHAR . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body

    TK_IDENTIFIER  shift, and go to state 12


State 2

    9 declaration_global_int: KW_INT . TK_IDENTIFIER ':' expression ';'
   10                       | KW_INT . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   11                       | KW_INT . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_val ';'
   21 declaration_function: KW_INT . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body

    TK_IDENTIFIER  shift, and go to state 13


State 3

   15 declaration_global_float: KW_FLOAT . TK_IDENTIFIER ':' LIT_INTEGER OPERATOR_DIV LIT_INTEGER ';'
   16                         | KW_FLOAT . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
   23 declaration_function: KW_FLOAT . TK_IDENTIFIER '(' declaration_function_args_or_empty ')' declaration_function_body

    TK_IDENTIFIER  shift, and go to state 14


State 4

    0 $accept: program . $end

    $end  shift, and go to state 15


State 5

    1 program: declaration_list .

    $default  reduce using rule 1 (program)


State 6

    2 declaration_list: declaration . declaration_list

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declaration_list)

    declaration_list          go to state 16
    declaration               go to state 6
    declaration_global        go to state 7
    declaration_global_int    go to state 8
    declaration_global_char   go to state 9
    declaration_global_float  go to state 10
    declaration_function      go to state 11


State 7

    5 declaration: declaration_global .

    $default  reduce using rule 5 (declaration)


State 8

    6 declaration_global: declaration_global_int .

    $default  reduce using rule 6 (declaration_global)


State 9

    7 declaration_global: declaration_global_char .

    $default  reduce using rule 7 (declaration_global)


State 10

    8 declaration_global: declaration_global_float .

    $default  reduce using rule 8 (declaration_global)


State 11

    4 declaration: declaration_function .

    $default  reduce using rule 4 (declaration)


State 12

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER . ':' expression ';'
   13                        | KW_CHAR TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'
   14                        | KW_CHAR TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' array_val ';'
   22 declaration_function: KW_CHAR TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    ':'  shift, and go to state 17
    '['  shift, and go to state 18
    '('  shift, and go to state 19


State 13

    9 declaration_global_int: KW_INT TK_IDENTIFIER . ':' expression ';'
   10                       | KW_INT TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'
   11                       | KW_INT TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' array_val ';'
   21 declaration_function: KW_INT TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    ':'  shift, and go to state 20
    '['  shift, and go to state 21
    '('  shift, and go to state 22


State 14

   15 declaration_global_float: KW_FLOAT TK_IDENTIFIER . ':' LIT_INTEGER OPERATOR_DIV LIT_INTEGER ';'
   16                         | KW_FLOAT TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'
   23 declaration_function: KW_FLOAT TK_IDENTIFIER . '(' declaration_function_args_or_empty ')' declaration_function_body

    ':'  shift, and go to state 23
    '['  shift, and go to state 24
    '('  shift, and go to state 25


State 15

    0 $accept: program $end .

    $default  accept


State 16

    2 declaration_list: declaration declaration_list .

    $default  reduce using rule 2 (declaration_list)


State 17

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' . expression ';'

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 32
    array_element  go to state 33


State 18

   13 declaration_global_char: KW_CHAR TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'
   14                        | KW_CHAR TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' array_val ';'

    LIT_INTEGER  shift, and go to state 34


State 19

   22 declaration_function: KW_CHAR TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    KW_CHAR   shift, and go to state 35
    KW_INT    shift, and go to state 36
    KW_FLOAT  shift, and go to state 37

    $default  reduce using rule 25 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 38
    declaration_function_args           go to state 39


State 20

    9 declaration_global_int: KW_INT TK_IDENTIFIER ':' . expression ';'

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 40
    array_element  go to state 33


State 21

   10 declaration_global_int: KW_INT TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'
   11                       | KW_INT TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' array_val ';'

    LIT_INTEGER  shift, and go to state 41


State 22

   21 declaration_function: KW_INT TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    KW_CHAR   shift, and go to state 35
    KW_INT    shift, and go to state 36
    KW_FLOAT  shift, and go to state 37

    $default  reduce using rule 25 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 42
    declaration_function_args           go to state 39


State 23

   15 declaration_global_float: KW_FLOAT TK_IDENTIFIER ':' . LIT_INTEGER OPERATOR_DIV LIT_INTEGER ';'

    LIT_INTEGER  shift, and go to state 43


State 24

   16 declaration_global_float: KW_FLOAT TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'

    LIT_INTEGER  shift, and go to state 44


State 25

   23 declaration_function: KW_FLOAT TK_IDENTIFIER '(' . declaration_function_args_or_empty ')' declaration_function_body

    KW_CHAR   shift, and go to state 35
    KW_INT    shift, and go to state 36
    KW_FLOAT  shift, and go to state 37

    $default  reduce using rule 25 (declaration_function_args_or_empty)

    declaration_function_args_or_empty  go to state 45
    declaration_function_args           go to state 39


State 26

   53 expression: KW_READ .

    $default  reduce using rule 53 (expression)


State 27

   33 function_call: TK_IDENTIFIER . '(' function_call_args_or_empty ')'
   52 expression: TK_IDENTIFIER .
   67 array_element: TK_IDENTIFIER . '[' expression ']'

    '['  shift, and go to state 46
    '('  shift, and go to state 47

    $default  reduce using rule 52 (expression)


State 28

   50 expression: LIT_INTEGER .

    $default  reduce using rule 50 (expression)


State 29

   51 expression: LIT_CHAR .

    $default  reduce using rule 51 (expression)


State 30

   65 expression: '(' . expression ')'

    KW_READ        shift, and go to state 26
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 28
    LIT_CHAR       shift, and go to state 29
    '('            shift, and go to state 30

    function_call  go to state 31
    expression     go to state 48
    array_element  go to state 33


State 31

   66 expression: function_call .

    $default  reduce using rule 66 (expression)


State 32

   12 declaration_global_char: KW_CHAR TK_IDENTIFIER ':' expression . ';'
   55 expression: expression . OPERATOR_ADD expression
   56           | expression . OPERATOR_SUB expression
   57           | expression . OPERATOR_MULT expression
   58           | expression . OPERATOR_DIV expression
   59           | expression . OPERATOR_LT expression
   60           | expression . OPERATOR_LTE expression
   61           | expression . OPERATOR_GT expression
   62           | expression . OPERATOR_GTE expression
   63           | expression . OPERATOR_EQ expression
   64           | expression . OPERATOR_DIF expression

    OPERATOR_ADD   shift, and go to state 49
    OPERATOR_SUB   shift, and go to state 50
    OPERATOR_MULT  shift, and go to state 51
    OPERATOR_DIV   shift, and go to state 52
    OPERATOR_LTE   shift, and go to state 53
    OPERATOR_LT    shift, and go to state 54
    OPERATOR_GTE   shift, and go to state 55
    OPERATOR_GT    shift, and go to state 56
    OPERATOR_EQ    shift, and go to state 57
    OPERATOR_DIF   shift, and go to state 58
    ';'            shift, and go to state 59


State 33

   54 expression: array_element .

    $default  reduce using rule 54 (expression)


State 34

   13 declaration_global_char: KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER . ']' ';'
   14                        | KW_CHAR TK_IDENTIFIER '[' LIT_INTEGER . ']' ':' array_val ';'

    ']'  shift, and go to state 60


State 35

   27 declaration_function_args: KW_CHAR . TK_IDENTIFIER ',' declaration_function_args
   30                          | KW_CHAR . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 61


State 36

   26 declaration_function_args: KW_INT . TK_IDENTIFIER ',' declaration_function_args
   29                          | KW_INT . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 62


State 37

   28 declaration_function_args: KW_FLOAT . TK_IDENTIFIER ',' declaration_function_args
   31                          | KW_FLOAT . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 63


State 38

   22 declaration_function: KW_CHAR TK_IDENTIFIER '(' declaration_function_args_or_empty . ')' declaration_function_body

    ')'  shift, and go to state 64


State 39

   24 declaration_function_args_or_empty: declaration_function_args .
